Fix capture on mobile

--- a/sudoku-ui/src/app.css
+++ b/sudoku-ui/src/app.css
@@ -81,27 +81,22 @@ input[type=number].puzzle__cell {
 }
 
 .camera-capture {
-  width: 100vw;
-  height: 100vh;
   position: absolute;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
   background: rgba( 50, 205, 50, .5 );
+  overflow:hidden;
 }
 
 .camera-capture__video {
   position: absolute;
-  /* width: 100vw; */
-  /* height: 100vh; */
   left: 0;
   top: 0;
 }
 
 .camera-capture__overlay-canvas {
-  /* width: 100vw;
-  height: 100vh; */
   position: absolute;
   top: 0;
   bottom: 0;
